refactor: User Preference security and optimization (CodeRabbit)
- Enforced authorization with ownership checks in Service and Controller.
- Added RangeDTO validation: minValue <= maxValue and positive values.
- Validated @NotNull elements in choice lists within RequestDTO.
- Optimized JPA queries using DISTINCT and @OrderBy collections.
- Removed dead code in PreferenceRangeRepository for Hibernate compliance.
- Updated unit tests to cover security and validation constraints.